# vvvvvvvvvvv56

app/: build.gradle.kts
app/src/main/java/com/vcam/service/: VCamService.kt
app/src/main/java/com/vcam/ui/: MainActivity.kt
app/src/main/java/com/vcam/utils/: CameraInjector.kt
app/src/main/jni/: CMakeLists.txt  vcam_inject.cpp  vcam_jni.cpp
